--- a/Launcher/App/src/main/res/drawable/bkg_dialog.xml
+++ b/Launcher/App/src/main/res/drawable/bkg_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-
-    <corners android:radius="20dp" />
+    <corners android:radius="39dp" />
     <solid android:color="#2A2A2C" />
+
+<!--    <padding android:top="15dp" android:right="15dp" android:left="15dp" android:bottom="15dp" />-->
 </shape>
