--- a/Launcher/App/src/main/res/drawable/switch_track_custom.xml
+++ b/Launcher/App/src/main/res/drawable/switch_track_custom.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <size android:height="20dp" />
-    <corners android:radius="25dp" />
-    <solid android:color="@android:color/darker_gray" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_checked="true">
+        <shape android:dither="true" android:shape="rectangle" android:useLevel="false" android:visible="true">
+            <corners android:radius="20dp" />
+            <solid android:color="#FFF"/>
+            <size android:width="37dp" android:height="28dp" />
+        </shape>
+    </item>
+    <item android:state_checked="false">
+        <shape android:dither="true" android:shape="rectangle" android:useLevel="false" android:visible="true">
+            <corners android:radius="20dp" />
+            <solid android:color="#434347"/>
+            <size android:width="37dp" android:height="28dp" />
+        </shape>
+    </item>
+</selector>
