--- a/Launcher/App/src/main/res/layout/dialog_app_details.xml
+++ b/Launcher/App/src/main/res/layout/dialog_app_details.xml
@@ -5,6 +5,7 @@
     android:id="@+id/layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/bkg_dialog"
     android:padding="20dp">
 
     <Button
@@ -32,8 +33,8 @@
 
     <View
         android:id="@+id/sizer"
-        android:layout_width="wrap_content"
-        android:layout_height="150dp"
+        android:layout_width="350dp"
+        android:layout_height="92dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,12 +57,13 @@
             android:id="@+id/app_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_gravity="bottom"
             android:layout_weight="1"
             android:autofillHints="text"
             android:backgroundTint="@android:color/white"
             android:inputType="text"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:textSize="28sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -72,26 +74,44 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sizer">
 
-        <Button
-            android:id="@+id/launch_mode"
-            android:layout_width="200dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:background="@drawable/bkg_button_pad"
-            android:text="@string/launch_in"
-            android:textColor="@android:color/white" />
+            android:background="@drawable/bkg_button">
 
-        <Button
-            android:id="@+id/cancel"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/bkg_button_pad"
-            android:text="@android:string/ok"
-            android:textColor="@android:color/white" />
+            <TextView
+                android:id="@+id/textView5"
+                style="@style/SettingButtonLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/launch_switch" />
+
+            <Switch
+                android:id="@+id/launch_mode_switch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:thumb="@drawable/switch_thumb_custom"
+                android:track="@drawable/switch_track_custom" />
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/confirm"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:background="@drawable/bkg_button">
+
+            <TextView
+                style="@style/SettingButtonLabel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|center_horizontal"
+                android:text="@string/confirm" />
+        </FrameLayout>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
