--- a/Launcher/App/src/main/res/layout/dialog_group_details.xml
+++ b/Launcher/App/src/main/res/layout/dialog_group_details.xml
@@ -1,54 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp"
-    android:orientation="vertical">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bkg_dialog"
+    android:padding="20dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
-        android:textSize="20sp"
-        android:textColor="@android:color/white"
-        android:text="@string/edit_group"/>
-
-    <EditText
-        android:id="@+id/group_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="@android:color/white"
-        android:textColor="@android:color/white"
-        android:autofillHints="text"
-        android:inputType="text" />
+    <View
+        android:id="@+id/sizer"
+        android:layout_width="230dp"
+        android:layout_height="63dp"
+        android:layout_marginTop="-10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-10dp"
         android:orientation="horizontal"
-        android:layout_gravity="end">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/group_delete"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/group_name"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/bkg_button_pad"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="@string/delete_group"
-            android:textColor="@android:color/white" />
-
-        <Button
-            android:id="@+id/cancel"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:background="@drawable/bkg_button_pad"
-            android:text="@android:string/ok"
-            android:textColor="@android:color/white" />
+            android:layout_weight="1"
+            android:autofillHints="text"
+            android:backgroundTint="@android:color/white"
+            android:inputType="text"
+            android:textColor="@android:color/white"
+            android:textSize="28sp" />
     </LinearLayout>
-</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sizer">
+
+        <FrameLayout
+            android:id="@+id/group_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/bkg_button">
+
+            <TextView
+                style="@style/SettingButtonLabel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/delete_group" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/confirm"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:background="@drawable/bkg_button">
+
+            <TextView
+                style="@style/SettingButtonLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:text="@string/confirm" />
+        </FrameLayout>
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
