--- a/Launcher/App/src/main/res/layout/dialog_launch_out_info.xml
+++ b/Launcher/App/src/main/res/layout/dialog_launch_out_info.xml
@@ -8,7 +8,7 @@
     android:padding="20dp">
 
     <TextView
-        style="@style/SettingMidTitle"
+        style="@style/SettingTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/launch_title" />
