--- a/Launcher/App/src/main/res/layout/lv_group.xml
+++ b/Launcher/App/src/main/res/layout/lv_group.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="40dp">
 
     <TextView
         android:id="@+id/textLabel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:paddingLeft="20dp"
         android:paddingTop="5dp"
@@ -23,11 +24,11 @@
         android:layout_height="28dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_margin="2dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
         android:background="@drawable/ic_more"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible" />
 </RelativeLayout>
