--- a/Launcher/App/src/main/res/layout/dialog_group_details.xml
+++ b/Launcher/App/src/main/res/layout/dialog_group_details.xml
@@ -16,32 +16,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <EditText
+        android:id="@+id/group_name"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-10dp"
-        android:orientation="horizontal"
+        android:layout_height="50sp"
+        android:layout_margin="2dp"
+        android:layout_weight="1"
+        android:autofillHints="text"
+        android:background="@drawable/bkg_group_name"
+        android:inputType="text"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:textColor="@android:color/white"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/group_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:autofillHints="text"
-            android:backgroundTint="@android:color/white"
-            android:inputType="text"
-            android:textColor="@android:color/white"
-            android:textSize="28sp" />
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="right"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
