--- a/Launcher/App/src/main/res/layout/dialog_hide_groups_info.xml
+++ b/Launcher/App/src/main/res/layout/dialog_hide_groups_info.xml
@@ -8,7 +8,7 @@
     android:padding="20dp">
 
     <View
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp" />
 
     <TextView
@@ -19,12 +19,13 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="85dp"
+        android:layout_height="120dp"
         android:layout_marginBottom="10dp"
         android:autofillHints="text"
         android:backgroundTint="@android:color/white"
-        android:text="@string/launch_message"
+        android:text="@string/hidden_groups_message"
         android:textColor="@android:color/white" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,6 +43,7 @@
                 style="@style/SettingButtonLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="@string/cancel" />
 
         </FrameLayout>
@@ -58,6 +60,7 @@
                 style="@style/SettingButtonLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="@string/understood" />
 
         </FrameLayout>
