--- a/Launcher/App/src/main/res/layout/dialog_service_info.xml
+++ b/Launcher/App/src/main/res/layout/dialog_service_info.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
-        <LinearLayout
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bkg_dialog"
         android:orientation="vertical"
         android:padding="20dp">
+
+        <View
+            android:layout_width="370dp"
+            android:layout_height="0dp" />
 
         <TextView
             style="@style/SettingTitle"
@@ -20,33 +26,33 @@
             android:layout_height="wrap_content"
             android:text="@string/service_subtitle" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:autofillHints="text"
-                android:backgroundTint="@android:color/white"
-                android:text="@string/service_info"
-                android:textColor="@android:color/white" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="120sp"
+            android:layout_marginBottom="10dp"
+            android:autofillHints="text"
+            android:backgroundTint="@android:color/white"
+            android:text="@string/service_info"
+            android:textColor="@android:color/white" />
 
-            <TextView
-                style="@style/SettingSubtitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/service_instructions" />
+        <TextView
+            style="@style/SettingSubtitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/service_instructions" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:autofillHints="text"
-                android:backgroundTint="@android:color/white"
-                android:text="@string/service_message"
-                android:textColor="@android:color/white" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="72sp"
+            android:layout_marginBottom="10dp"
+            android:autofillHints="text"
+            android:backgroundTint="@android:color/white"
+            android:text="@string/service_message"
+            android:textColor="@android:color/white" />
 
         <FrameLayout
             android:id="@+id/confirm"
-            android:layout_width="370dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bkg_button">
 
@@ -54,7 +60,6 @@
                 style="@style/SettingButtonLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:text="@string/service_next" />
         </FrameLayout>
 
