--- a/Launcher/App/src/main/res/values/styles.xml
+++ b/Launcher/App/src/main/res/values/styles.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <style name="ThemeOverlay.Material" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:windowAnimationStyle">@null</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowActivityTransitions">false</item>
+        <item name="android:fontFamily">@font/poligon</item>
     </style>
 
     <style name="SettingTitle">
@@ -19,13 +20,12 @@
         <item name="android:gravity">center_horizontal</item>
     </style>
 
-
-
     <style name="SettingButtonLabel">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">16sp</item>
         <item name="android:paddingRight">6dp</item>
         <item name="android:gravity">left|center_vertical</item>
+        <item name="android:layout_gravity">center</item>
         <item name="android:singleLine">true</item>
     </style>
 
