--- a/Launcher/App/src/main/res/drawable/bkg_name_group.xml
+++ b/Launcher/App/src/main/res/drawable/bkg_name_group.xml
@@ -11,13 +11,14 @@
     <item android:bottom="2.5dp">
         <shape>
             <solid android:color="#1c1c1d" />
-            <corners android:radius="15dp" />
+            <corners android:radius="14.5dp" />
         </shape>
     </item>
-    <item android:bottom="3dp">
+    <item>
         <shape>
             <padding android:left="15dp" />
             <padding android:right="15dp" />
+            <padding android:bottom="2.5dp" />
         </shape>
     </item>
 
