--- a/Launcher/App/src/main/res/drawable/bkg_name_app.xml
+++ b/Launcher/App/src/main/res/drawable/bkg_name_app.xml
@@ -1,6 +1,6 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item>
+    <item android:top="5dp">
         <shape android:shape="rectangle" >
             <solid android:color="#FFF" />
             <corners android:radius="5dp" />
@@ -13,10 +13,11 @@
             <corners android:radius="5dp" />
         </shape>
     </item>
-    <item android:bottom="2dp">
+    <item>
         <shape>
-            <padding android:left="5dp" />
-            <padding android:right="5dp" />
+            <padding android:left="7dp" />
+            <padding android:right="7dp" />
+            <padding android:bottom="1dp" />
         </shape>
     </item>
 
