--- a/Launcher/App/src/main/res/layout/dialog_group_details.xml
+++ b/Launcher/App/src/main/res/layout/dialog_group_details.xml
@@ -1,49 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/bkg_dialog"
+    android:orientation="vertical"
     android:padding="20dp">
 
     <View
         android:id="@+id/sizer"
-        android:layout_width="230dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="-10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="260dp"
+        android:layout_height="0dp" />
 
     <EditText
         android:id="@+id/group_name"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="50sp"
         android:layout_margin="2dp"
         android:layout_weight="1"
         android:autofillHints="text"
-        android:background="@drawable/bkg_group_name"
+        android:background="@drawable/bkg_name_group"
         android:inputType="text"
         android:selectAllOnFocus="true"
-        android:singleLine="true"
         android:textColor="@android:color/white"
-        android:textSize="28sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="28sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:layout_weight="1"
+        android:background="@drawable/bkg_button"
+        android:gravity="right"
+        android:orientation="horizontal"
+        android:padding="6dp">
+
+        <TextView
+            style="@style/SettingButtonLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:text="@string/default_vr" />
+
+        <Switch
+            android:id="@+id/switch_default_vr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:thumb="@drawable/switch_thumb_custom"
+            android:track="@drawable/switch_track_custom"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:layout_weight="1"
+        android:background="@drawable/bkg_button"
+        android:gravity="right"
+        android:orientation="horizontal"
+        android:padding="6dp">
+
+        <TextView
+            style="@style/SettingButtonLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:text="@string/default_2d" />
+
+        <Switch
+            android:id="@+id/switch_default_2d"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:thumb="@drawable/switch_thumb_custom"
+            android:track="@drawable/switch_track_custom"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="right"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sizer">
+        android:orientation="horizontal">
 
         <FrameLayout
             android:id="@+id/group_delete"
@@ -74,4 +116,4 @@
         </FrameLayout>
 
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
