--- a/Launcher/App/src/main/res/layout/dialog_hide_groups_info.xml
+++ b/Launcher/App/src/main/res/layout/dialog_hide_groups_info.xml
@@ -19,7 +19,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="100sp"
         android:layout_marginBottom="10dp"
         android:autofillHints="text"
         android:backgroundTint="@android:color/white"
