--- a/Launcher/App/src/main/res/layout/dialog_launch_out_info.xml
+++ b/Launcher/App/src/main/res/layout/dialog_launch_out_info.xml
@@ -19,7 +19,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="85dp"
+        android:layout_height="80sp"
         android:layout_marginBottom="10dp"
         android:autofillHints="text"
         android:backgroundTint="@android:color/white"
